test/scc/decl/semantic-errors/077.a
077.t:3:23: error: variable 'a' declared '_Thread_local' at function scope